# gst-plugin-ndi

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
example/: Cargo.toml
example/src/: main.rs  ndilib.rs
gst-plugin-ndi/: Cargo.toml  README.md
gst-plugin-ndi/src/: lib.rs  ndiaudiosrc.rs  ndilib.rs  ndisrc.rs  ndisys.rs  ndivideosrc.rs
src/: device_provider.rs  lib.rs  main.rs  ndi.rs  ndiaudiosrc.rs  ndisink.rs  ndisinkcombiner.rs  ndisinkmeta.rs  ndisrcmeta.rs  ndisys.rs  ndivideosrc.rs  receiver.rs
src/base/: aggregator.rs  aggregator_pad.rs  ffi.rs  gstaggregator.c  gstaggregator.h  mod.rs  utils.rs  versions.txt
src/base/auto/: aggregator.rs  aggregator_pad.rs  enums.rs  mod.rs
src/base/subclass/: aggregator.rs  aggregator_pad.rs  mod.rs
src/device_provider/: imp.rs  mod.rs
src/ndiaudiosrc/: imp.rs  mod.rs
src/ndisink/: imp.rs  mod.rs
src/ndisinkcombiner/: imp.rs  mod.rs
src/ndisrc/: imp.rs  mod.rs
src/ndisrcdemux/: imp.rs  mod.rs
src/ndivideosrc/: imp.rs  mod.rs
