[package]
name = "gst-plugin-ndi"
version = "1.0.0"
authors = ["Ruben Gonzalez <rubenrua@teltek.es>", "Daniel Vilar <daniel.peiteado@teltek.es>", "Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/teltek/gst-plugin-ndi"
license = "LGPL"
description = "NewTek NDI Plugin"
edition = "2018"

[dependencies]
glib = "0.10"
gobject-sys = "0.10"
gstreamer = { version = "0.16", features = ["v1_12"] }
gstreamer-base = "0.16"
gstreamer-audio = "0.16"
gstreamer-video = { version = "0.16", features = ["v1_12"] }
lazy_static = "1.1.0"
byte-slice-cast = "0.3.0"
once_cell = "1.0"

[build-dependencies]
gst-plugin-version-helper = "0.2"

[features]
default = ["interlaced-fields", "reference-timestamps"]
interlaced-fields = ["gstreamer/v1_16", "gstreamer-video/v1_16"]
reference-timestamps = ["gstreamer/v1_14"]

[lib]
name = "gstndi"
crate-type = ["cdylib"]
path = "src/lib.rs"
