[package]
name = "gst-plugin-ndi"
version = "1.0.0"
authors = ["Ruben Gonzalez <rubenrua@teltek.es>", "Daniel Vilar <daniel.peiteado@teltek.es>", "Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/teltek/gst-plugin-ndi"
license = "LGPL"
description = "NewTek NDI Plugin"
edition = "2018"

[dependencies]
glib = "0.10"
gobject-sys = "0.10"
gst = { package = "gstreamer", version = "0.16", features = ["v1_12"] }
gst-base = { package = "gstreamer-base", version = "0.16" }
gst-audio = { package = "gstreamer-audio", version = "0.16" }
gst-video = { package = "gstreamer-video", version = "0.16", features = ["v1_12"] }
byte-slice-cast = "1"
once_cell = "1.0"

[build-dependencies]
gst-plugin-version-helper = "0.2"

[features]
default = ["interlaced-fields", "reference-timestamps"]
interlaced-fields = ["gst/v1_16", "gst-video/v1_16"]
reference-timestamps = ["gst/v1_14"]

[lib]
name = "gstndi"
crate-type = ["cdylib"]
path = "src/lib.rs"
