[package]
name = "gst-plugin-ndi"
version = "1.0.0"
authors = ["Ruben Gonzalez <rubenrua@teltek.es>", "Daniel Vilar <daniel.peiteado@teltek.es>", "Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/teltek/gst-plugin-ndi"
license = "LGPL"
description = "NewTek NDI Plugin"
edition = "2018"

[dependencies]
glib = "0.14"
gst = { package = "gstreamer", version = "0.17.4", features = ["v1_12"] }
gst-base = { package = "gstreamer-base", version = "0.17" }
gst-audio = { package = "gstreamer-audio", version = "0.17" }
gst-video = { package = "gstreamer-video", version = "0.17", features = ["v1_12"] }
byte-slice-cast = "1"
once_cell = "1.0"
byteorder = "1.0"

[build-dependencies]
gst-plugin-version-helper = "0.7"
cc = "1.0"
pkg-config = "0.3"

[features]
default = ["interlaced-fields", "reference-timestamps", "sink"]
interlaced-fields = ["gst/v1_16", "gst-video/v1_16"]
reference-timestamps = ["gst/v1_14"]
sink = ["gst/v1_18", "gst-base/v1_18"]
sink-v1_14 = ["gst/v1_14", "gst-base/v1_14"]
advanced-sdk = []

[lib]
name = "gstndi"
crate-type = ["cdylib"]
path = "src/lib.rs"
