[package]
name = "gst-plugin-ndi"
version = "0.1.0"
authors = ["Ruben Gonzalez <rubenrua@teltek.es>"]
repository = "https://gitlab.teltek.es/rubenrua/ndi-rs.git"
license = "LGPL"

[dependencies]
gst-plugin = { git = "https://github.com/sdroege/gst-plugin-rs" }
glib = { git = "https://github.com/gtk-rs/glib" }
gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
gstreamer-video = { git = "https://github.com/sdroege/gstreamer-rs" }
gstreamer-audio = { git = "https://github.com/sdroege/gstreamer-rs" }
byte-slice-cast = "0.1" # TODO delete
num-traits = "0.2" # TODO delete

[lib]
name = "gstndi"
crate-type = ["cdylib"]
path = "src/lib.rs"
