[package]
name = "gst-plugin-ndi"
version = "0.1.0"
authors = ["Ruben Gonzalez <rubenrua@teltek.es>"]
repository = "https://gitlab.teltek.es/rubenrua/ndi-rs.git"
license = "unknow" # TODO MIT/Apache-2.0

[dependencies]
gst-plugin = "0.2"
glib = "0.5"
gstreamer = "0.11"
gstreamer-base = "0.11"
gstreamer-video = "0.11"
gstreamer-audio = "0.11"
byte-slice-cast = "0.1" # TODO delete
num-traits = "0.2" # TODO delete

[lib]
name = "gstndi"
crate-type = ["cdylib"]
path = "src/lib.rs"
