[package]
name = "gst-plugin-ndi"
version = "0.1.0"
authors = ["Ruben Gonzalez <rubenrua@teltek.es>", "Daniel Vilar <daniel.peiteado@teltek.es>"]
repository = "https://gitlab.teltek.es/rubenrua/ndi-rs.git"
license = "LGPL"

[dependencies]
gobject-subclass = "0.2"
gst-plugin = "0.3"
glib = "0.6"
gstreamer = "0.12"
gstreamer-base = "0.12"
gstreamer-video = "0.12"
gstreamer-audio = "0.12"
lazy_static = "1.1.0"

[lib]
name = "gstndi"
crate-type = ["cdylib"]
path = "src/lib.rs"
